# course_work_6

./: README.md  curse_work_6  pyproject.toml  utils.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_date.py
blog/templates/blog/: blog_detail.html  blog_form.html  blog_list.html  blog_management.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
mailing/jobs/: jobs.py  task.py
mailing/migrations/: 0001_initial.py  0002_partner.py  0003_alter_client_options_alter_partner_options_and_more.py  0004_mailing_message.py  0005_mailing_name_mailing.py  0006_alter_mailing_status.py  0007_logmailing.py  0008_alter_mailing_periodicity_alter_message_text.py  0009_mailing_is_active.py  0010_partner_is_active.py  0011_alter_mailing_options.py  0012_alter_mailing_options.py
mailing/templates/mailing/: client_list_create.html  mailing_confirm_delete.html  mailing_detail_manage.html  (+10 more)
main/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py  0002_alter_questionnaire_city_alter_questionnaire_name_and_more.py  0003_alter_questionnaire_image.py  0004_alter_questionnaire_image.py
main/templatetags/: mediapath.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_dislikes_remove_user_likes.py  0003_alter_user_is_active.py  0004_user_verification_code_alter_user_is_active.py  0005_remove_user_verification_code.py  0006_user_verification_code.py
(+12 files in other folders)
